@@ -184,7 +184,7 @@ module Netzke
         end
 
         # a work-around for to_json not taking the current timezone into account when serializing ActiveSupport::TimeWithZone
-        v = v.to_datetime.to_s(:db) if v.is_a?(ActiveSupport::TimeWithZone)
+        v = v.to_datetime.to_s(:db) if [ActiveSupport::TimeWithZone, Date].include?(v.class)
 
         v
       end
