@@ -10,12 +10,12 @@ class BookPagingFormPanel < Netzke::Basepack::PagingFormPanel
         :flex => 2,
         :layout => :anchor,
         :defaults => {:anchor => "-8"},
-        :items => [:title, :notes, :digitized, :created_at, :updated_at]
+        :items => [:title, :notes, :digitized, :created_at, :updated_at, :last_read_at]
       },{
         :flex => 1,
         :layout => :anchor,
         :defaults => {:anchor => "-8"},
-        :items => [:author__name, {:name => :author__first_name, :read_only => true}, :exemplars]
+        :items => [:author__name, {:name => :author__first_name, :read_only => true}, :exemplars, :published_on]
       }]}]
     })
   end
