@@ -11,7 +11,7 @@
 #
 # It's strongly recommended to check this file into your version control system.
 
-ActiveRecord::Schema.define(:version => 20110901114016) do
+ActiveRecord::Schema.define(:version => 20110909071740) do
 
   create_table "addresses", :force => true do |t|
     t.integer  "user_id"
@@ -48,6 +48,7 @@ ActiveRecord::Schema.define(:version => 20110901114016) do
     t.datetime "created_at"
     t.datetime "updated_at"
     t.datetime "last_read_at"
+    t.date     "published_on"
   end
 
   create_table "netzke_component_states", :force => true do |t|
